# StreamingCC

./: .gitignore  .travis.yml  CMakeLists.txt  DevNotes.md  Doxyfile  README.md  index.html  params.json
docs/: search.json
docs/doxygen-theme/: customdoxygen.css
docs/html/: Algebra_8hpp_source.html  CountMin_8h_source.html  CountMin_8hpp_source.html  CountMin__basic_8h_source.html  CountSketch_8hpp_source.html  CountSketch__basic_8h_source.html  Hash_8h_source.html  Hash_8hpp_source.html  Sampling_8hpp_source.html  Sketch_8h_source.html  annotated.html  classCountMin-members.html  classCountMin.html  classCountMin__basic-members.html  classCountMin__basic.html  classCountSketch-members.html  classCountSketch.html  classCountSketch__basic-members.html  classCountSketch__basic.html  classGaussian-members.html  classGaussian.html  classReservoirSampling-members.html  classReservoirSampling.html  classSampling-members.html  classSampling.html  classSketch-members.html  classSketch.html  classUniformSampling-members.html  classUniformSampling.html  classes.html  config_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html  md_README.html  pages.html  (+2 more)
docs/html/search/: all_0.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_3.js  pages_0.js  searchdata.js
docs/latex/: annotated.tex  classCountMin.eps  classCountMin.tex  classCountMin__basic.eps  classCountMin__basic.tex  classCountSketch.eps  classCountSketch.tex  classCountSketch__basic.eps  classCountSketch__basic.tex  classGaussian.tex  classReservoirSampling.eps  classReservoirSampling.tex  classSampling.eps  classSampling.tex  classSketch.eps  classSketch.tex  classUniformSampling.eps  classUniformSampling.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  hierarchy.tex  md_README.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.out  refman.tex  refman.toc
docs/xml/: CountMin.xml  Sketch.xml  index.xml
examples/: CMakeLists.txt  CSieveStreaming_Example.cpp  CountMin_Example.cpp  CountSketch_Example.cpp  DistinctCounter_Example.cpp  F2_Example.cpp  MisraGries_Example.cpp  sampling_example.cc  sieve_test.cpp  test.cpp
include/: Algebra.hpp  CountMin.h  CountMin.hpp  CountMin_basic.h  CountSketch.hpp  CountSketch_basic.h  Hash.h  Hash.hpp  Sampling.hpp  Sketch.h  config.h  streamcc  streamcc_test.h  utils.h  utils.hpp
include/streamcc_headers/: CVector.hpp  CountMin.hpp  CountMin_basic.h  CountSketch.hpp  CountSketch_basic.h  DistinctCounter.hpp  F2.hpp  Hash.h  MisraGries.hpp  Sampling.hpp  SieveStreaming.hpp  Sketch.h  Sketch.hpp  config.h  utils.hpp
python/: Makefile  setup.py
python/streamingcc/: _bloom_filter.pyx  _count_min.pyx  _f2.pyx  _hyper_loglog.pyx  bloom_filter.py  count_min.py  f2.py  hyper_loglog.py
src/: CountMin.cpp  CountMin_basic.cpp  CountSketch.hpp  CountSketch_basic.cpp  Hash.cpp  Makefile  bloom_filter.cc  count_min.cc  f2.cc  hash.cc  hyper_loglog.cc  streamingcc  test.cpp  util.cc  utils.cpp
src/dist_clustering/: CMakeLists.txt  Makefile  README.md  main.cc
src/dist_clustering/algorithms/: algoList.h  algo_util.cc  algo_util.h  centeralizedMultiRoundSampling.cc  centeralizedMultiRoundSampling.h  data.cc  data.h  kmean_minus_minus.cc  kmean_minus_minus.h  kmean_plus_plus.cc  kmean_plus_plus.h  local_search.cc  local_search.h  simple.cc  simple.h  simple_algo.cc  simple_algo.h  succ_sampling.cc  succ_sampling.h  timer.cc  timer.h  util.cc  util.h
src/dist_clustering/boost_mpi/: algo.hpp  bg.cc  kmean_par.cc  mpi_exp.cc  mpi_exp2.cc  mpi_test.cc  rand.cc  util.hpp
src/dist_clustering/data/: 16points.csv  1d_points.csv  kdd10000.csv  kdd200.csv
src/dist_clustering/distAlgo/: distAlgo_util.cc  distAlgo_util.h  multiRoundSampling.cc  multiRoundSampling.h  partitioning.cc  partitioning.h
src/dist_clustering/distBin/: Makefile  pretty_tsv.sh  runScript.sh
src/dist_clustering/experiments/: dataManager.cc  dataManager.h  erfanUtil.h  experimentUtil.cc  experimentUtil.h
src/dist_clustering/mpiTest/: .nfs0000000104585e3900003806  CMakeLists.txt  distAlgo_util_test.cc  multi_round_sampling_test.cc  partitioning_test.cc
src/dist_clustering/scripts/: draw.py  draw_comm.py  draw_time.py  draw_time_coreset_size.py
src/dist_clustering/tests/: add_outliers.cc  algo_util_test.cc  centeralized_multi_round_sampling_test.cc  centralized_exp.cc  dataManager_test.cc  data_test.cc  debug_test.cc  exp.cc  gen_gauss.cc  kmean_minus_minus_test.cc  local_search_test.cc  rm_column.cc  simple_algo_test.cc  simple_test.cc  succ_sampling_test.cc  util_test.cc  weighted_local_search_test.cc
src/dist_clustering/usr/lib/: libboost_mpi.so.1.66.0  libboost_serialization.so.1.66.0
src/embed_join/: README.md  embedjoin.cpp  embedjoin.h  makefile  readme.txt  time.cpp  verification.cpp
src/robust_l0_sampling/: CMakeLists.txt  README.md
src/robust_l0_sampling/src/: exp_utils.cc  exp_utils.h  f0.cc  f0.h  hash.cc  hash.h  point.cc  point.h  robust_f0.cc  robust_f0.h  robust_sampler.cc  robust_sampler.h  timer.cc  timer.h  utils.cc  utils.h
src/robust_l0_sampling/tests/: exp_ell0_time_space.cc  exp_f0.cc  exp_f0_space_thread.cc  exp_f0_thread.cc  exp_inf.cc  exp_inf_d1.cc  exp_inf_d20.cc  exp_inf_d5.cc  exp_inf_real.cc  exp_test.cc  exp_utils_test.cc  f0_test.cc  hash_test.cc  make_dataset.cc  point_test.cc  robust_sampler_test.cc  utils_test.cc
src/streamingcc_include/: bloom_filter.h  count_min.h  f2.h  hash.h  hyper_loglog.h  sampling.h  streaming_algorithm.h  util.h
testBin/: tests
tests/: Makefile  bloom_test.cc  count_min_test.cc  cout_min_test.cc  f2_test.cc  hash_test.cc  hyper_loglog_test.cc  tests.cpp  util_test.cc
